--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
         <gson.version>2.8.8</gson.version>
         <postgresql.version>42.2.23</postgresql.version>
